@@ -993,7 +993,6 @@ basicInduction (region * loopReg, ebbIndex * ebbi)
       /* for all instructions in the blocks do */
       for (ic = lBlock->sch; ic; ic = ic->next)
         {
-
           operand *aSym;
           long litValue;
           induction *ip;
@@ -1020,8 +1019,10 @@ basicInduction (region * loopReg, ebbIndex * ebbi)
           if (ic->op != '=')
             continue;
 
-          if (IS_SYMOP (IC_RESULT (ic)) &&
-              !IS_TRUE_SYMOP (IC_RESULT (ic)) &&
+          if (!IS_SYMOP (IC_RESULT (ic)))
+            continue;
+
+          if (!IS_TRUE_SYMOP (IC_RESULT (ic)) &&
               !OP_SYMBOL (IC_RESULT (ic))->isreqv)
             continue;
 
